--- a/css/ucb-related-articles.css
+++ b/css/ucb-related-articles.css
@@ -1,22 +1,24 @@
 .ucb-related-articles-block {
   display: none;
 	margin-top: 20px;
+  --bs-gutter-x: 1.5rem;
+  --bs-gutter-y: 0;
 }
 
 .ucb-article-card-img {
-    max-width: 100%;
-    height: auto;
+  max-width: 100%;
+  height: auto;
 }
 
 .ucb-article-card-data {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .ucb-article-card {
-    margin-bottom: 2em;
+  margin-bottom: 2em;
 }
 
 .ucb-related-article-card-body{
-    font-size: 85%;
+  font-size: 85%;
 }
