--- a/templates/paragraphs/paragraph--newsletter-section--email-html.html.twig
+++ b/templates/paragraphs/paragraph--newsletter-section--email-html.html.twig
@@ -32,9 +32,16 @@
 							<tr>
 								{% if item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.alt|render %}
 								<td align="center" style="text-align: left; padding-right:10px; padding-left:10px; padding-bottom:20px">
-									<a href="{{base_url}}{{ path('entity.node.canonical', {'node': item.entity.field_newsletter_article_select.target_id}) }}">
-                    <img
-                    src="{{base_url}}{{file_url(item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.entity.fileuri|image_style('focal_image_wide'))|replace({'//': '/'})}}"
+                  <a href="{{ url('entity.node.canonical', {
+                    'node': item.entity.field_newsletter_article_select.target_id
+                  }, {'absolute': true}) }}">
+                  <img
+                  src="{{
+                    request.schemeAndHttpHost ~ file_url(
+                      item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.entity.fileuri
+                      | image_style('focal_image_wide')
+                    )
+                  }}"
                     width="600"
                     height="300"
                     style="display: block !important; width: 600px !important; height: 300px !important; object-fit: cover !important; border: 0 !important; outline: none !important;"
@@ -44,9 +51,16 @@
 									{# Code to render selected article content (!thumbnail) #}
 								{% elseif item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.alt|render %}
 								<td align="center" style="text-align: left; padding-right:10px; padding-left:10px;padding-bottom:20px">
-									<a href="{{base_url}}{{ path('entity.node.canonical', {'node': item.entity.field_newsletter_article_select.target_id}) }}">
-                    <img
-                    src="{{base_url}}{{file_url(item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.entity.fileuri|image_style('focal_image_wide'))|replace({'//': '/'})}}"
+                  <a href="{{ url('entity.node.canonical', {
+                    'node': item.entity.field_newsletter_article_select.target_id
+                  }, {'absolute': true}) }}">
+                  <img
+                  src="{{
+                    request.schemeAndHttpHost ~ file_url(
+                      item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.entity.fileuri
+                      | image_style('focal_image_wide')
+                    )
+                  }}"
                     width="600"
                     height="300"
                     style="display: block !important; width: 600px !important; height: 300px !important; object-fit: cover !important; border: 0 !important; outline: none !important;"
@@ -57,7 +71,12 @@
 								{% elseif item.entity.field_newsletter_content_image.entity.field_media_image.alt|render %}
 								<td align="center" style="text-align: left; padding-right:10px; padding-left:10px;padding-bottom:20px;">
                   <img
-                  src="{{base_url}}{{file_url(item.entity.field_newsletter_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_wide'))|replace({'//': '/'})}}"
+                  src="{{
+                    request.schemeAndHttpHost ~ file_url(
+                      item.entity.field_newsletter_content_image.entity.field_media_image.entity.fileuri
+                      | image_style('focal_image_wide')
+                    )
+                  }}"
                   width="600"
                   height="300"
                   style="display: block !important; width: 600px !important; height: 300px !important; object-fit: cover !important; border: 0 !important; outline: none !important;"
@@ -70,8 +89,11 @@
 					<tr id="feature-article-title-email-{{key}}">
 						<td align="center" style="font-size:18px;text-align: left; padding-right:10px; padding-left:10px"align="center" style="text-align: left; padding-right:10px; padding-left:10px">
 							<h3>
-								<a style="text-decoration: none;" href="{{base_url}}{{ path('entity.node.canonical', {'node': item.entity.field_newsletter_article_select.target_id}) }}">
-									{{ item.entity.field_newsletter_article_select.entity.title.value|render|striptags|trim }}
+                <a style="text-decoration: none;"
+                href="{{ url('entity.node.canonical', {
+                  'node': item.entity.field_newsletter_article_select.target_id
+                }, {'absolute': true}) }}">
+                {{ item.entity.field_newsletter_article_select.entity.title.value|render|striptags|trim }}
 								</a>
 							</h3>
 						</td>
@@ -156,7 +178,12 @@
 											{# Code to render selected article content (thumbnail) #}
 											{% if item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image %}
                       <img
-                      src="{{base_url}}{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.entity.fileuri|image_style('focal_image_square')|replace({'//': '/'}) }}"
+                      src="{{
+                        request.schemeAndHttpHost ~ file_url(
+                          item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.entity.fileuri
+                          | image_style('focal_image_square')
+                        )
+                      }}"
                       width="130"
                       height="130"
                       style="display: block !important; width: 130px !important; height: 130px !important; object-fit: cover !important; border: 0 !important; outline: none !important;"
@@ -164,7 +191,12 @@
 												{# Code to render selected article content (!thumbnail) #}
 											{% elseif item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image %}
                       <img
-                      src="{{base_url}}{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.entity.fileuri|image_style('focal_image_square')|replace({'//': '/'}) }}"
+                      src="{{
+                        request.schemeAndHttpHost ~ file_url(
+                          item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.entity.fileuri
+                          | image_style('focal_image_square')
+                        )
+                      }}"
                       width="130"
                       height="130"
                       style="display: block !important; width: 130px !important; height: 130px !important; object-fit: cover !important; border: 0 !important; outline: none !important;"
@@ -172,7 +204,12 @@
 												{# Code to render user made content #}
 											{% elseif item.entity.field_newsletter_content_image.entity.field_media_image %}
                       <img
-                      src="{{base_url}}{{ item.entity.field_newsletter_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_square')|replace({'//': '/'}) }}"
+                      src="{{
+                        request.schemeAndHttpHost ~ file_url(
+                          item.entity.field_newsletter_content_image.entity.field_media_image.entity.fileuri
+                          | image_style('focal_image_square')
+                        )
+                      }}"
                       width="130"
                       height="130"
                       style="display: block !important; width: 130px !important; height: 130px !important; object-fit: cover !important; border: 0 !important; outline: none !important;"
@@ -190,7 +227,10 @@
 													{% if item.entity.field_newsletter_article_select.entity.title.value|render %}
 													<td>
 														<h3 style="font-size: 18px;">
-														<a style="text-decoration: none;" href="{{base_url}}{{ path('entity.node.canonical', {'node': item.entity.field_newsletter_article_select.target_id}) }}">
+                              <a style="text-decoration: none;"
+                              href="{{ url('entity.node.canonical', {
+                                'node': item.entity.field_newsletter_article_select.target_id
+                              }, {'absolute': true}) }}">
 															{{ item.entity.field_newsletter_article_select.entity.title.value|render|striptags|trim }}
 														</a>
 													</h3>
