#1562 - Mega Menu: fix button color being over-written

--- a/css/block/ucb-mega-menu.css
+++ b/css/block/ucb-mega-menu.css
@@ -78,7 +78,7 @@
 }
 
 .ucb-main-nav-container .ucb-main-menu-mega-menu .menu-item .ucb-mega-menu-column-wrapper a{
-  color: #0277bd !important;
+  color: #0277bd;
 }
 
 .ucb-main-nav-container .ucb-main-menu-mega-menu .menu-item .ucb-mega-menu-column-wrapper a:hover{
