--- a/templates/block/block--ucb-latest-issues-block.html.twig
+++ b/templates/block/block--ucb-latest-issues-block.html.twig
@@ -14,10 +14,13 @@
 
 {% set baseurlJSON = (url('<front>')|render|trim('/'))%}
 
+{# Logged In - Used for showing errors to only authenticated #}
+{% set logged_in_class = logged_in ? 'ucb-authenticated' : 'ucb-anonymous' %}
+
 {% extends '@boulder_base/block/styled-block.html.twig' %}
 {% block content %}
   {{ attach_library('boulder_base/ucb-latest-issue') }}
-  <latest-issue-block baseURL="{{baseurlJSON}}" siteName="{{ site_name|lower|replace({ ' ': '-', '_': '-' }) }}">
+  <latest-issue-block class="{{logged_in_class}}" baseURL="{{baseurlJSON}}" siteName="{{ site_name|lower|replace({ ' ': '-', '_': '-' }) }}">
     <div id="ucb-al-loading" class="ucb-list-msg ucb-loading-data">
       <i class="fa-solid fa-spinner fa-3x fa-spin-pulse"></i>
     </div>
