--- a/templates/block/block--ucb-people-list-block.html.twig
+++ b/templates/block/block--ucb-people-list-block.html.twig
@@ -3,6 +3,10 @@
  * @file Contains the template to display the People List block.
  */
 #}
+
+{# Logged In - Used for showing errors to only authenticated #}
+{% set logged_in_class = logged_in ? 'ucb-authenticated' : 'ucb-anonymous' %}
+
 {% set classes = [
   'block',
   'container',
@@ -60,6 +64,7 @@
   {{ attach_library('boulder_base/ucb-people-list-block') }}
   {# People List Block - Main Block#}
   <people-list-block
+    class="{{logged_in_class}}"
     site-base= "{{ url('<front>')|render|trim('/') }}"
     base-uri="{{ url('<front>')|render|trim('/') }}/jsonapi"
     config="{{ config|json_encode }}"
